@@ -1,5 +1,11 @@
 2008-11-11  Jonh Wendell <jwendell@gnome.org>
 
+	* src/vinagre-bookmarks.c (vinagre_bookmarks_add): Use the connection's
+	name for the default bookmark name, when adding. Closes #557675.
+	Patch from Mauro Dreissig.
+
+2008-11-11  Jonh Wendell <jwendell@gnome.org>
+
 	* lots of files: Make avahi optional by adding an option to
 	configure script: --disable-avahi. It's enabled by default.
 	Closes #557740.
